kustomize/clusters/vader/user-apps/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-deployment

spec:
  selector:
    matchLabels:
      app: heimdall
  replicas: 1
  template:
    metadata:
      labels: 
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: linuxserver/heimdall:latest
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 80
              name: http
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: heimdall-config-pvc
