kustomize/clusters/vader/user-apps/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service

spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
    - name: http
      port: 80
      targetPort: http
